welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: not found: value vuBiscuit
	if (vuBiscuit == true)
            ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
		return
                ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche();
                      ^